# SchedulerSPD

./: CMakeLists.txt  README.md  build.sh  data1
inc/: Problem.hpp  Struct.hpp  Zadanie.hpp
src/: Problem.cpp  Zadanie.cpp  main.cpp
